# ontology_reseach

./: CLAUDE.md  RAG_data_preparation.ipynb  README.md  pipeline.py  pyproject.toml  tmp.ipynb
datasets/: extract_customer_triples.py  product_catalog.xlsx  tmp_xx_ontology_sample0.xlsx  tmp_xx_ontology_sample_history_behave.xlsx  tmp_xx_ontology_sample_history_plc.xlsx  tmp_xx_ontology_sample_profi.xlsx  tmp_xx_ontology_sample_qw.xlsx  测试用表字典.xlsx
modules/: data_loader.py  data_preprocessing.py  evaluation.py  field_mapping.py  llm_call.py  prompt_v0.py  prompt_v1.py  result_processor.py
output/20260513_103842/: prompts.json  results.json  top1_reference_detail.xlsx  top3_reference_detail.xlsx
output/20260513_171226/: prompts.json  results.json  top1_reference_detail.xlsx  top3_reference_detail.xlsx
output/20260513_172028/: prompts.json  results.json  top1_reference_detail.xlsx  top3_reference_detail.xlsx
output/20260513_190257/: prompts.json  results.json  top1_reference_detail.xlsx  top3_reference_detail.xlsx
output/20260513_192903/: evaluation_summary.md  prompts.json  results.json  top1_reference_detail.xlsx  top3_reference_detail.xlsx
output/20260513_194218/: evaluation_summary.md  prompts.json  results.json  top1_reference_detail.xlsx  top3_reference_detail.xlsx
output/20260513_194831/: evaluation_summary.md  prompts.json  results.json  top1_reference_detail.xlsx  top3_reference_detail.xlsx
